statefulset-headless-demo/headless-demo1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment-headless
  labels:
    app: flask
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask-container
        image: kunchalavikram/sampleflask:v2
        ports:
        - containerPort: 5000



---
apiVersion: v1
kind: Service
metadata:
  name: headless-flask
spec:
  clusterIP: None
  selector:
    app: flask
  ports:
    - name: http  
      port: 80
      targetPort: 5000
      protocol: TCP
